[metadata]
name = flaskr
version = 1.0.0
maintainer = Edwin Yung
maintainer_email = eyung7@gmail.com
description = Flask web service

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskr